Changes src root file name 2

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
    <link rel="icon" type="image/x-icon" href="Resume/assets/img/favicon.ico" />
   <title>Portfolio</title>
-  <link rel="stylesheet" type="text/css" href="resume.css">
+  <link rel="stylesheet" type="text/css" href="design/resume.css">
   <script defer src="resume.js"> </script>
 </head>
 <body>
