--- a/Resume/index.html
+++ b/Resume/index.html
@@ -143,7 +143,7 @@
                     <h2 class="mb-5">Project</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"> Emotion Recognition from Facial expression using Deep Learning [Source Code]</h3>
+                            <h3 class="mb-0"> Emotion Recognition from Facial expression using Deep Learning <a href="https://github.com/aarnabsaha98/Emotion-detection-using-deep-leaning">[Source-Code] </a></h3>
                             <p>
                             <ul>  
                                 <li>Design the model using deep learning neural network to recognize the human emotion from webcam or data image.</li>
@@ -156,7 +156,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"> Build a Blog Website Using Django [Source-Code]</h3>
+                            <h3 class="mb-0"> Build a Blog Website Using Django <a href="https://github.com/aarnabsaha98/Django-Blog-Project">[Source-Code] </a></h3>
                             <p>
                             <ul>  
                                 <li> HTML, CSS used for frontend and Django used for backend database used SQL-lite..</li>
