--- a/index.html
+++ b/index.html
@@ -5,33 +5,51 @@
    <link rel="icon" type="image/x-icon" href="Resume/assets/img/favicon.ico" />
   <title>Portfolio</title>
   <link rel="stylesheet" type="text/css" href="design/resume.css">
-  <script defer src="resume.js"> </script>
+  <script defer src="design/resume.js"> </script>
 </head>
 <body>
  
 
- <div class="header">
+ <div class="header" id ="Header">
     <div  class="header-right">
+      <a class ="links" href="#about">About</a>  
       <a class ="links" href= "mailto:aarnabsaha98@hotmail.com">Hire Me</a>
-      <a class ="links" href="Resume/index.html">Profile</a>   
+      <a class ="links" href="Resume/index.html">Profile</a>
+</div>
     </div>
-  </div>
+
   <div class="primary-container" id = "main">
     <h1 class="h2-name-tag"> Arnab Saha</h1>
+
   </div>
+  <hr style="width: 300px;">
     <div class="secondary-container">
         <h3 class="h2-details-tag">Learner | </h3>
         <h3 class="h2-details-tag"> Python Developer </h3>
-
     </div>
 <!--     <div class = "profile">
       <button class="Profile-btn"> Hire Me</button>
       <button class="Profile-btn"> Profile</button>
     </div>
  -->
+ <div class = 'about-container' id= "about">
+    <h1 class="h2-name-tag"> About</h1>
+ <!-- <img src="design/colorIMG.jpeg" class="my-img"> -->
+    <div class="article-section">
+     <!--  <fieldset>
+        <legend>Hello</legend> -->
 
+        <p> <span style="font-size: 35px ;font-weight: bold;">Hello, </span>
+          I am a fresher and self learnt programmer. I am dynamic , passionate and fun loving person. <br /> I love <strong>Python</strong> as a programming language and want to explore more and know it better than ever.
+          I have done projects in field of Machine Learning and web-development also. 
+            To know me better click on <b>Profile</b> .<br />
+            Happy Learning
+      </p>
+      <!-- </fieldset>
+      -->
+    </div>
 
-
+  </div>
 
 </body>
 </html>
