final chnages done

--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
   <div class="primary-container" id = "main">
     <h1 class="h2-name-tag"> Arnab Saha</h1>
 
-  </div>
+  
   <hr style="width: 300px;">
     <div class="secondary-container">
-        <h3 class="h2-details-tag">Learner | </h3>
-        <h3 class="h2-details-tag"> Python Developer </h3>
+        <h3 class="h2-details-tag">Learner |  Python Developer </h3>
     </div>
 <!--     <div class = "profile">
       <button class="Profile-btn"> Hire Me</button>
@@ -39,16 +38,17 @@
      <!--  <fieldset>
         <legend>Hello</legend> -->
 
-        <p> <span style="font-size: 35px ;font-weight: bold;">Hello, </span>
+        <p> <span style="font-size: 35px ;font-weight: bold; font-style:italic;">Hello, </span>
           I am a fresher and self learnt programmer. I am dynamic , passionate and fun loving person. <br /> I love <strong>Python</strong> as a programming language and want to explore more and know it better than ever.
-          I have done projects in field of Machine Learning and web-development also. 
-            To know me better click on <b>Profile</b> .<br />
+          I have done projects in field of Machine Learning and web-development. 
+          <br/>  To know me better click on <b>Profile</b> .<br />
             Happy Learning
       </p>
       <!-- </fieldset>
       -->
     </div>
 
+  </div>
   </div>
 
 </body>
