--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8">
    <link rel="icon" type="image/x-icon" href="Resume/assets/img/favicon.ico" />
-  <title>Portfolio</title>
+  <title>
+    
+    arnabsaha
+
+  </title>
   <link rel="stylesheet" type="text/css" href="design/resume.css">
   <script defer src="design/resume.js"> </script>
 </head>
