--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
+
+
 <head>
   <meta charset="utf-8">
    <link rel="icon" type="image/x-icon" href="Resume/assets/img/favicon.ico" />
   <title>
-    
     arnabsaha
-
   </title>
+  <!-- Regular script and StyleSheets -->
   <link rel="stylesheet" type="text/css" href="design/resume.css">
   <script defer src="design/resume.js"> </script>
+
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/c6bb48cbcf.js" crossorigin="anonymous"></script>
 </head>
+
+
 <body>
  
 
@@ -51,6 +57,13 @@
       <!-- </fieldset>
       -->
     </div>
+
+  </div>
+
+  <div class="thanks">
+
+
+    <h4 style="font-style: normal;"> Thanks for visiting In </h4>
 
   </div>
   </div>
