--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   
   <hr style="width: 300px;">
     <div class="secondary-container">
-        <h3 class="h2-details-tag">Learner |  Python Developer </h3>
+        <h3 class="h2-details-tag">Learner |  Salesforce Developer </h3>
     </div>
 <!--     <div class = "profile">
       <button class="Profile-btn"> Hire Me</button>
