--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-   <link rel="icon" type="image/x-icon" href="Resume/assets/img/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="Resume/assets/img/favicon.ico" />
   <title>
     arnabsaha
   </title>
@@ -18,55 +18,57 @@
 
 
 <body>
- 
 
- <div class="header" id ="Header">
-    <div  class="header-right">
-      <a class ="links" href="#about">About</a>  
-      <a class ="links" href= "mailto:aarnabsaha98@hotmail.com">Hire Me</a>
-      <a class ="links" href="Resume/index.html">Profile</a>
-</div>
+
+  <div class="header" id="Header">
+    <div class="header-right">
+      <a class="links" href="#about">About</a>
+      <a class="links" href="mailto:aarnabsaha98@hotmail.com">Hire Me</a>
+      <a class="links" href="Resume/index.html">Profile</a>
     </div>
+  </div>
 
-  <div class="primary-container" id = "main">
+  <div class="primary-container" id="main">
     <h1 class="h2-name-tag"> Arnab Saha</h1>
 
-  
-  <hr style="width: 300px;">
+
+    <hr style="width: 300px;">
     <div class="secondary-container">
-        <h3 class="h2-details-tag">Learner |  Salesforce Developer </h3>
+      <h3 class="h2-details-tag">Learner | Developer </h3>
     </div>
-<!--     <div class = "profile">
+    <!--     <div class = "profile">
       <button class="Profile-btn"> Hire Me</button>
       <button class="Profile-btn"> Profile</button>
     </div>
  -->
- <div class = 'about-container' id= "about">
-    <h1 class="h2-name-tag"> About</h1>
- <!-- <img src="design/colorIMG.jpeg" class="my-img"> -->
-    <div class="article-section">
-     <!--  <fieldset>
+    <div class='about-container' id="about">
+      <h1 class="h2-name-tag"> About</h1>
+      <!-- <img src="design/colorIMG.jpeg" class="my-img"> -->
+      <div class="article-section">
+        <!--  <fieldset>
         <legend>Hello</legend> -->
 
         <p> <span style="font-size: 35px ;font-weight: bold; font-style:italic;">Hello, </span>
-          I am a fresher and self learnt programmer. I am dynamic , passionate and fun loving person. <br /> I love <strong>Python</strong> as a programming language and want to explore more and know it better than ever.
-          I have done projects in field of Machine Learning and web-development. 
-          <br/>  To know me better click on <b>Profile</b> .<br />
-            Happy Learning
-      </p>
-      <!-- </fieldset>
+          I am a fresher and self learnt programmer. I am dynamic , passionate and fun loving person. <br /> I love
+          <strong>Python</strong> as a programming language and want to explore more and know it better than ever.
+          I have done projects in field of Machine Learning and web-development.
+          <br /> To know me better click on <b>Profile</b> .<br />
+          Happy Learning
+        </p>
+        <!-- </fieldset>
       -->
+      </div>
+
     </div>
 
-  </div>
-
-  <div class="thanks">
+    <div class="thanks">
 
 
-    <h4 style="font-style: normal;"> Thanks for visiting In </h4>
+      <h4 style="font-style: normal;"> Thanks for visiting In </h4>
 
-  </div>
+    </div>
   </div>
 
 </body>
+
 </html>
