--- a/index.html
+++ b/index.html
@@ -1,74 +1,130 @@
-<!DOCTYPE html>
-<html>
-
+<!doctype html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <link rel="icon" type="image/x-icon" href="Resume/assets/img/favicon.ico" />
-  <title>
-    arnabsaha
-  </title>
-  <!-- Regular script and StyleSheets -->
-  <link rel="stylesheet" type="text/css" href="design/resume.css">
-  <script defer src="design/resume.js"> </script>
-
-  <!-- Font Awesome -->
-  <script src="https://kit.fontawesome.com/c6bb48cbcf.js" crossorigin="anonymous"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./design/resume.css" rel="stylesheet">
+    <title>Bootstrap Example</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+    <script src="./design/resume.js"></script>
 </head>
 
-
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <div class="container-fluid colorStyle">
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+                aria-controls="offcanvasNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end colorStyle" tabindex="-1" id="offcanvasNavbar"
+                aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                    <!-- <h5 class="offcanvas-title" id="offcanvasNavbarLabel">bla</h5> -->
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-start flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#skills">Skill</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#contact">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="mailto:aarnabsaha98@hotmail.com">Hire Me</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+    </nav>
+    <header id="header">
+        <div class="container">
+            <div class='about-container'>
+                <h1 style="font-size: 5pc;"> Arnab Saha</h1>
+                <hr style="width: 50pcpc;">
+                <h3 class="h2-details-tag">Software Engineer | Salesforce Developer</h3>
 
+                <div class='about-container' id="about">
+                    <h1 class="h2-name-tag"> About Me</h1>
+                    <div class="article-section">
+                        <section id="about">
+                            <p> <span style="font-size: 35px ;font-weight: bold; font-style:italic;">Hello, </span>
+                                I am a Software Engineer and self learnt programmer. I am dynamic, passionate and fun
+                                loving
+                                person and love
+                                to learn new technologies. Currently I am working as a Salesforce developer(Inhouse
+                                products)
+                                and CPQ
+                                consultant for US based clients.
+                                Happy Learning
+                            </p>
+                        </section>
+                    </div>
+                </div>
 
-  <div class="header" id="Header">
-    <div class="header-right">
-      <a class="links" href="#about">About</a>
-      <a class="links" href="mailto:aarnabsaha98@hotmail.com">Hire Me</a>
-      <a class="links" href="Resume/index.html">Profile</a>
-    </div>
-  </div>
+                <div class='about-container' id="skills">
+                    <h1 class="h2-name-tag">Skill</h1>
+                    <div class="row">
+                        <div class="col skill">Javascript</div>
+                        <div class="col skill">Salesforce</div>
+                        <div class="col skill">Apex</div>
+                        <div class="col skill">LWC</div>
+                    </div>
+                    <div class="row">
+                        <div class="col skill">GIT</div>
+                        <div class="col skill">GitHub</div>
+                        <div class="col skill">Python</div>
+                        <div class="col skill">Html-Css</div>
 
-  <div class="primary-container" id="main">
-    <h1 class="h2-name-tag"> Arnab Saha</h1>
+                    </div>
+                </div>
+            </div>
+    </header>
 
-
-    <hr style="width: 300px;">
-    <div class="secondary-container">
-      <h3 class="h2-details-tag">Learner | Developer </h3>
-    </div>
-    <!--     <div class = "profile">
-      <button class="Profile-btn"> Hire Me</button>
-      <button class="Profile-btn"> Profile</button>
-    </div>
- -->
-    <div class='about-container' id="about">
-      <h1 class="h2-name-tag"> About</h1>
-      <!-- <img src="design/colorIMG.jpeg" class="my-img"> -->
-      <div class="article-section">
-        <!--  <fieldset>
-        <legend>Hello</legend> -->
-
-        <p> <span style="font-size: 35px ;font-weight: bold; font-style:italic;">Hello, </span>
-          I am a fresher and self learnt programmer. I am dynamic , passionate and fun loving person. <br /> I love
-          <strong>Python</strong> as a programming language and want to explore more and know it better than ever.
-          I have done projects in field of Machine Learning and web-development.
-          <br /> To know me better click on <b>Profile</b> .<br />
-          Happy Learning
-        </p>
-        <!-- </fieldset>
-      -->
-      </div>
-
-    </div>
-
-    <div class="thanks">
-
-
-      <h4 style="font-style: normal;"> Thanks for visiting In </h4>
-
-    </div>
-  </div>
-
+    <footer id="footer">
+        <div class="connect" id="contact">
+            <section>
+                <h2>Contact Me</h2>
+                <form id='form' onsubmit="onSubmit(event)">
+                    <div class="form-group">
+                        <input type="text" id="name" name="name" value="" placeholder="Please Mention Your Name"
+                            required>
+                        <div id="error"></div>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" id="message" name="message" value="" placeholder="Write a message">
+                    </div>
+                    <button type="submit" id="submit">Send Message</button>
+                </form>
+            </section>
+        </div>
+        <div class="connect">
+            <h3>Or, Connect Me Over </h3>
+            <div class="social-icons row">
+                <div class="row"><a class="social-icon" href="https://www.linkedin.com/in/arnab-saha-4366051b5"><i
+                            class="fab fa-linkedin-in"></i></a></div>
+                <div class="row"><a class="social-icon" href="https://github.com/aarnabsaha98"><i
+                            class="fab fa-github"></i></a>
+                </div>
+                <div class="row"><a class="social-icon" href="https://twitter.com/aarnab981"><i
+                            class="fab fa-twitter"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="connect">
+            <h3>For More Information Please,</h3>
+            <button type="submit" id="download" onclick="download()">Download CV</button>
+        </div>
+    </footer>
 </body>
 
 </html>
